# orama

./: .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .npmrc  .prettierignore  .swcrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  biome.json  nx.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  release.mjs  solution.md  tsconfig.browser.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsconfig.webpack.json  turbo.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
benchmarks/: .gitignore  algorithms.js  bundle-size.js  common.js  deno.json  index.js  insert_bench.js  package-lock.json  package.json  search_filters_bench.js  search_plain_bench.js  search_plain_long_terms_bench.js
internals/: index.ts
rust/: .rustfmt.toml  Cargo.toml  default.nix  flake.nix
rust/lyra-utils/: Cargo.toml
rust/lyra-utils-wasm/: Cargo.toml
rust/lyra-utils-wasm/src/: lib.rs
rust/lyra-utils/src/: lib.rs  tokenscore.rs
rust/scripts/: common.mjs  packArtifacts.mjs  package.json  wasm.mjs  wasm.sh  wasmAll.mjs  wasm_all.sh
rust/src/wasm/artifacts/deno/: lyra_utils_wasm.js  lyra_utils_wasm_bg.wasm
rust/src/wasm/artifacts/nodejs/: lyra_utils_wasm.js
rust/src/wasm/artifacts/web/: lyra_utils_wasm.d.ts  lyra_utils_wasm.js  lyra_utils_wasm_bg.wasm
scripts/: postbuild.sh  release.mjs  test-pack.mjs  version.mjs
src/: algorithms.ts  commonjs.cts  components.ts  constants.ts  consts.ts  errors.ts  facets.ts  filters.ts  index.ts  insertion-checker.ts  (+6 more)
(+274 files in other folders)
