[workspace]

members = [
  "lyra-utils",
  "lyra-utils-wasm",
]

[profile.release]
# The higher the option, the faster the generated code (at the cost of size / compilation time).
# options:
opt-level = 3

# if true, trigger a panic on overflow
overflow-checks = true

# options: 0 (no debug info at all) | 1 (line tables only) | 2 (full debug info)
debug = 0

# options: "none" (default) | "symbols" | "debuginfo"
strip = "symbols"

# how many "code generation units" to split the crate into, the more the faster the compiler (and slower the generated code)
codegen-units = 1

# if true, enable LLVM's link time optimizations
lto = true

debug-assertions = false

[profile.dev]
opt-level = 0
