[package]
name = "lyra-utils-wasm"
version = "0.3.1"
edition = "2021"
authors = ["Alberto Schiabel <alberto.schiabel@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "lyra_utils_wasm"

[dependencies]
lyra-utils = { path = "../lyra-utils" }
serde = { version="1.0.147", features = ["derive"] }
tsify = { version = "0.4.2", features = ["json"] }
wasm-bindgen = { version = "0.2.83" }
